test/fail/unused-false-positive.mo


(switch (true,false) {
  case (a,b) { d # a # b };
}) : Text;
